--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Streamdata.io API Gallery - gsa-per-diem-api
+title: Streamdata.io API Gallery - GSA Per Diem API
 ---
 
 {% assign listing_object = site.listings %}
